--- a/scss/style.scss
+++ b/scss/style.scss
@@ -322,7 +322,7 @@ input:focus, select:focus, textarea:focus {
   border: 1px solid orangered;
   bottom: 0;
   left: -2px;
-  height: 100%;
+  //height: 100%;
   width: 0;
   transform: translateY(85%);
 }
@@ -1671,6 +1671,83 @@ height: 200px;
     }
  }
 
+// NEWS PAGE
+.news_wrapper {
+  display: flex;
+  .subcategory_fix {
+    height: 80vh;
+    margin-bottom: 25vh;
+  }
+   .category_container {
+     width: 100%;
+   }
+  .xxx1{
+    border-right: 2px solid #f54b19;
+    border-left: none;
+    border-bottom: 2px solid #f54b19;
+  }
+  .xxx1::before {
+    left: 0;
+    transform: translateX(-105%) rotate(225deg);
+  }
+
+  .blog_top_container {
+    .triangles {
+      left: 160px;
+    }
+  }
+  .last_news {
+    display: flex;
+    position: relative;
+
+    .last_container {
+        background-color: white;
+        padding: 5rem;
+        position: relative;
+        z-index: 2;
+        width: 60%;
+
+      .news_preview{
+        padding: 3rem 0;
+      }
+      .fs36_r{
+        margin: 0;
+      }
+    }
+    .last_container::after{
+      content: '';
+      background-image: linear-gradient(to bottom, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);
+      background-repeat: no-repeat;
+      box-sizing: border-box;
+      position: absolute;
+      bottom: -50px;
+      left: -145px;
+      width: 420px;
+      height: 400px;
+      z-index: -1;
+    }
+    .last_container *{
+      width: 90%;
+    }
+
+    img {
+      position: absolute;
+      right: -60px;
+      bottom: -15px;
+      z-index: 5;
+    }
+  }
+  .last_news_bottom {
+    margin-top: 20vh;
+
+    .fs36_r{
+      margin: 0;
+    }
+  }
+}
+
+
+
 // BLOG PAGE
 .blog_wrapper {
   display: flex;
@@ -1771,13 +1848,14 @@ height: 200px;
 
 .more_posts {
   display: flex;
-  flex-basis: 33%;
   justify-content: space-around;
   margin: 5rem 15rem;
+  flex-wrap: wrap;
 
   .post_wrapper{
     display: flex;
     flex-direction: column;
+    flex-basis: 33%;
 
     img{
       width: 99%;
