--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2028,7 +2028,7 @@ height: 200px;
 .more_posts {
   display: flex;
   justify-content: space-around;
-  margin: 5rem 15rem;
+  margin: 0 15rem;
   flex-wrap: wrap;
 
   .post_wrapper{
