--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1725,7 +1725,7 @@ height: 200px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    padding-bottom: 5rem;
+    padding-bottom: 3rem;
     .btn{
       color: white;
       border: none;
@@ -1741,6 +1741,117 @@ height: 200px;
       color: #e9150b;
     }
   }
+  /* The Modal (background) */
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: black;
+  }
+
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    width: 90%;
+    max-width: 1200px;
+  }
+
+  /* The Close Button */
+  .close {
+    color: white;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 35px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #999;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .mySlides {
+    display: none;
+  }
+
+  .cursor {
+    cursor: pointer;
+  }
+
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+
+  img {
+    margin-bottom: 4px;
+  }
+
+  .caption-container {
+    text-align: center;
+    background-color: black;
+    padding: 2px 16px;
+    color: white;
+  }
+
+  .demo {
+    opacity: 0.6;
+  }
+
+  .active3,
+  .demo:hover {
+    opacity: 1;
+  }
+
+  img.hover-shadow {
+    transition: 0.3s;
+  }
 }
 .works_container{
   display: flex;
@@ -1754,10 +1865,45 @@ height: 200px;
 
     .img_wrapper{
       display: flex;
+      position: relative;
       flex-basis: 33%;
       flex-direction: column;
       width: 450px;
       margin: 2.5px 0;
+
+      .p_overlay{
+        display: flex;
+        align-items: flex-end;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: .5s ease;
+        background:linear-gradient(164.44deg, #FF5B00 11.01%, #F4511E 46.15%, #FD3304 79.37%, #E9150B 99.23%);
+
+        div {
+          display: flex;
+          flex-direction: column;
+          margin: 30px;
+        }
+        span {
+          color: white;
+          font-size: 20px;
+          font-family: Rubik;
+          margin-bottom: 15px;
+        }
+        p {
+          color: white;
+          font-size: 16px;
+        }
+      }
+    }
+    .img_wrapper:hover .p_overlay{
+      opacity: 0.8;
     }
   }
 
