--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1040,7 +1040,8 @@ header {
       position: absolute;
       bottom: -30px;
       right: -5%;
-      width: 750px;
+      //width: 750px;
+      width: 100%;
       height: 450px;
       z-index: 0;
     }
@@ -2469,6 +2470,18 @@ div{
     height: 505px;
   }
 
+  // About us
+  .about_us .about_us_center .about_us_right:after {
+    bottom: -33px;
+  }
+  .about_us .about_us_center .about_us_right:before {
+    right: 60px;
+  }
+  .xxx6:after {
+    height: 38%;
+  }
+
+
   //News
   .news_wrapper .last_news_bottom {
     margin-top: 30vh;
@@ -2480,6 +2493,10 @@ div{
   }
   .blog_wrapper {
     height: 105vh;
+  }
+
+  .blog .fs36_r {
+    margin-left: 16rem;
   }
 
   //Category
@@ -2502,5 +2519,62 @@ div{
   }
   .xxx8::before {
     transform: translateY(50%);
+  }
+}
+
+@media only screen and (max-width: 1600px) {
+  //Main page
+  .main_why_we .why_we_wrapper .why_container {
+    width: 325px;
+    height: 300px;
+  }
+
+
+  .main_service_container .xxx1::after {
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    border: 1px solid orangered;
+    bottom: 0;
+    left: -2px;
+    height: 100%;
+    width: 0;
+    transform: translateY(30%);
+  }
+
+  //Portfolio
+  .portfolio_wrapper .portfolio .xxx1 {
+    margin: 5rem 5rem 2rem;
+  }
+  //About us
+  .vacancy_wrapper {
+    background-color: #171717;
+    display: flex;
+    height: 80vh;
+    transform: translateY(23%);
+  }
+
+  //News
+  .news_wrapper .subcategory_fix {
+    margin-bottom: 40vh;
+  }
+
+  //Blog page
+  .blog_wrapper {
+    height: 120vh;
+  }
+
+
+  //Subcategory
+  .bigger_sub {
+    margin-left: 16rem;
+  }
+  .xxx8::before {
+    transform: translateY(57%);
+  }
+
+  //Contacts
+  .contacts .xxx1 .about_us_center .about_us_right:after {
+    right: 10%;
   }
 }
