--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,7 +46,7 @@
 }
 
 .fs36_r{
-  font-size: 1.875vw;
+  font-size: 36px;
   line-height: 1.4;
   letter-spacing: normal;
   font-family: Rubik;
@@ -57,7 +57,7 @@
   font-family: Rubik;
   font-style: normal;
   font-weight: bold;
-  font-size: 2.5vw;
+  font-size: 48px;
   line-height: 57px;
 }
 
@@ -92,7 +92,7 @@ a{
 }
 
 p {
-  font-size: 0.9375vw;
+  font-size: 18px;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -462,27 +462,27 @@ input:focus, select:focus, textarea:focus {
 }
 
 .big{
-  font-size: 1.45vw;
+  font-size: 28px;
   line-height: 33px;
   letter-spacing: 0.005em;
   text-transform: uppercase;
 }
 
 .bigger{
-  font-size:1.875vw;
+  font-size:36px;
   line-height: 43px;
   font-family: Rubik;
   margin-left: 15rem;
 }
 .bigger_sub{
-  font-size:1.875vw;
+  font-size:36px;
   line-height: 43px;
   font-family: Rubik;
   margin-left: 23rem;
 }
 
 .bigger_center{
-  font-size: 1.875vw;
+  font-size: 36px;
   line-height: 43px;
   font-family: Rubik;
   margin-bottom: 12px;
@@ -516,6 +516,10 @@ header {
   justify-content: space-around;
   width: 100%;
   padding: 35px;
+}
+
+.mob_menu {
+  display: none;
 }
 
 .menu_ul{
@@ -872,14 +876,17 @@ header {
 
     .how_we_work_right {
         position: relative;
-        transform: translate(0, -15px);
+        transform: translate(0, -16px);
         height: 30em;
-        min-width: 600px;
+        //min-width: 600px;
         width: 50%;
 
         img{
           position: relative;
           z-index: 1;
+          width: 100%;
+          max-width: 700px;
+          height: auto;
           transform: translate(0, 120px);
 
         }
@@ -1336,18 +1343,7 @@ height: 200px;
         left: -25px;
         z-index: 1;
       }
-      //div:after{
-      //  content: '';
-      //  background-image: linear-gradient(to bottom, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);
-      //  background-repeat: no-repeat;
-      //  box-sizing: border-box;
-      //  position: absolute;
-      //  bottom: -130px;
-      //  right: 0;
-      //  width: 577px;
-      //  height: 577px;
-      //  z-index: 0;
-      //}
+
   }
   .vacancy-right:after{
     content: '';
@@ -1485,16 +1481,6 @@ height: 200px;
   margin: 0 10rem 10vh;
 }
 
-//.slider_container {
-//  display: flex;
-//  justify-content: space-between;
-//  align-items: center;
-//  position: relative;
-//  background-color: white;
-//  box-shadow: 4px 0 20px rgba(16,16,16,0.2);
-//  width: 100%;
-//  min-height: 340px;
-//}
 
 .slider_container {
   display: flex;
@@ -1768,7 +1754,7 @@ height: 200px;
       border: none;
       background-color: transparent;
       outline: none;
-      font-size: 0.9375vw;
+      font-size:18px;
       font-family: Rubik;
     }
     .btn:hover {
@@ -2443,6 +2429,9 @@ div{
 }
 }
 }
+.footer_mobile_copy {
+  display: none;
+}
 
 //         MEDIA
 @media only screen and (max-width: 1680px) {
@@ -2675,8 +2664,8 @@ div{
   }
   .main_how_we_work .main_how_we_work_top .how_we_work_right {
     img{
-      width: 570px;
-      height: 475px;
+      //width: 570px;
+      //height: 475px;
     }
   }
   .main_how_we_work .main_how_we_work_top .how_we_work_right:after {
@@ -2730,7 +2719,7 @@ div{
   //Portfolio
   .works_container .works_wrapper .img_wrapper {
     width: 390px;
-    margin: 1.5px 0;
+    margin: 0.5px 0;
   }
   .portfolio_wrapper .portfolio .triangles {
     left: 5px;
@@ -2790,6 +2779,10 @@ div{
   }
   .about_us_callback {
     height: 85vh;
+  }
+  .about_us .about_us_center .about_us_right {
+    min-width: 495px;
+    transform: translate(35%, -25%);
   }
   .vacancy_wrapper .vacancy-right:after {
     right: -69px;
@@ -2948,16 +2941,17 @@ div{
   .callback_wrapper {
     margin: 0 5rem;
   }
-  .about_us .about_us_center .about_us_right {
+  .about_us_right {
      position: relative;
      height: 25em;
-     min-width: 600px;
+     min-width: 495px;
      width: 50%;
      transform: translate(19%, -31%);
    }
   .about_us .about_us_center .about_us_right:after {
     width: 450px;
   }
+
   .vacancy_wrapper .vacancy-right:after {
     right: -64px;
   }
@@ -3012,7 +3006,9 @@ div{
 }
 
 @media only screen and (max-width: 1024px) {
-
+  p {
+    font-size: 16px;
+  }
   //Main
   .main_top_wrapper {
     height: 75vh;
@@ -3077,7 +3073,7 @@ div{
     grid-template-rows: repeat(3, 9rem);
   }
   footer .footer_top .footer_top_left .footer_form_wrapper .footer_form {
-    width: 425px;
+    width: 370px;
   }
   footer .footer_top .footer_top_left {
     width: 50%;
@@ -3085,8 +3081,22 @@ div{
   footer .footer_top .footer_top_right .contact_map img {
     width: 450px;
   }
+  footer .footer_top .footer_top_left .footer_form_wrapper .form_container {
+    padding: 2% 10%;
+  }
   footer .footer_bottom .footer_social div {
     margin-right: 20px;
+  }
+  footer .footer_top .footer_top_right .footer_contacts {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+  }
+  footer .footer_top .footer_top_right {
+    width: 50%;
+  }
+  .footer_form_border {
+    width: 575px;
   }
 
 
@@ -3199,7 +3209,7 @@ div{
     margin: 5rem 2rem;
   }
   .post_container {
-    transform: translateY(-22.8%);
+    transform: translateY(-20.8%);
   }
   .blog .xxx1:before{
     display: none;
@@ -3211,7 +3221,7 @@ div{
 
   //Category
   .xxx5 {
-    padding: 0 0 4rem 0;
+    padding: 0 0 5rem 0;
   }
 
   //Subcategory
@@ -3240,5 +3250,430 @@ div{
   //BLOG PAGE
   .blog_wrapper {
     height: 142.6vh;
+  }
+
+  .news_wrapper .last_news_bottom {
+    margin-top: 10vh;
+  }
+  .portfolio_bottom {
+    transform: translateY(10%);
+  }
+  .portfolio_bottom .right {
+    margin-right: 3rem;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .bigger {
+    margin-left: 5rem;
+  }
+  .xxx1, .xxx2, .xxx2_2, .xxx3, .xxx4, .xxx5, .xxx6, .xxx7, .xxx8, .xxx9 {
+    padding: 2rem;
+  }
+
+  .header_wrapper {
+    display: none;
+  }
+  .mob_menu {
+    display: flex;
+  }
+  nav {
+    height: 65px;
+  }
+
+  #menuToggle {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 25px;
+    left: 25px;
+    z-index: 1;
+    -webkit-user-select: none;
+    user-select: none;
+  }
+
+  #menuToggle input {
+    display: flex;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
+
+  #menuToggle span {
+    display: flex;
+    width: 29px;
+    height: 2px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #ffffff;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 5px 0;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    opacity 0.55s ease;
+  }
+
+  #menuToggle span:first-child {
+    transform-origin: 0 0;
+  }
+
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0 100%;
+  }
+
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-3px, -1px);
+    background: white;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  #menu {
+    position: absolute;
+    width: 180px;
+    height: 400px;
+    //box-shadow: 0 0 10px #85888C;
+    margin: -50px 0 0 -50px;
+    padding: 125px 50px 50px 50px;
+    background-color: #171717;;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0 0;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+  }
+
+  #menu li {
+    padding: 10px 0;
+    transition-delay: 2s;
+  }
+
+  #menuToggle input:checked ~ ul {
+    transform: none;
+  }
+
+  .main_our_works .main_our_works_img_wrapper .main_gallery {
+    grid-template-columns: repeat(3, 15em);
+    grid-template-rows: repeat(3, 11em);
+  }
+
+  .main_why_we .why_we_wrapper {
+    flex-direction: column;
+  }
+  .main_why_we::after {
+    transform: translateY(0%);
+  }
+  .main_why_we .why_we_wrapper .why_container {
+    margin: 50px;
+    width: 360px;
+    height: 312px;
+  }
+  .main_how_we_work .main_how_we_work_top .how_we_work_right img {
+    transform: translate(0px, 90px);
+  }
+  .main_how_we_work .main_how_we_work_bottom {
+    height: 80px;
+  }
+  .xxx2, .xxx5 {
+    padding: 0 0 2rem 0;
+  }
+  footer .footer_top {
+    margin-top: 125px;
+  }
+  footer .footer_top .footer_top_left .footer_form_wrapper .footer_form_border {
+    display: none;
+  }
+  footer .footer_bottom .footer_menu {
+    display: none;
+  }
+  footer .footer_bottom .footer_social .social_wrapper {
+    display: flex;
+    flex-direction: row;
+    transform: translateY(0px);
+    height: 61px;
+    width: 161px;
+  }
+  .footer_mobile_copy {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 25px 0;
+    background-color: #171717;
+  }
+
+  //Portfolio
+  .works_container .works_wrapper .img_wrapper {
+   max-width: 366px;
+   width: 100%;
+   height: auto;
+  }
+  .portfolio_bottom .p_bottom .xxx1 {
+    margin: 5rem 0 0 2rem;
+  }
+  .portfolio_bottom .p_top span {
+    margin-left: 5rem;
+  }
+  .portfolio_bottom .p_top .triangles img:first-child {
+    transform: translate(18px, 10px);
+  }
+  .about_us .about_us_center .about_us_right {
+    transform: translate(23%, 15%);
+  }
+  .about_us .about_us_center .about_us_right img {
+    transform: translateX(-15%);
+    width: 385px;
+  }
+  .vacancy_wrapper .vacancy-right {
+    transform: translateX(-13%);
+  }
+  .xxx6:after {
+    height: 21%;
+  }
+
+  .blog .xxx1 {
+    padding: 5rem 2rem 2rem;
+  }
+  .news_wrapper .last_news img {
+    right: -4%;
+  }
+  .news_wrapper .last_news::before {
+    right: -50px;
+  }
+  .news_wrapper .last_news_bottom {
+    margin-top: 13vh;
+  }
+  .more_posts .post_wrapper {
+    flex-basis: 50%;
+  }
+  .xxx2_2 {
+    padding: 0;
+  }
+  .xxx7::before {
+    transform: translateY(-10%);
+  }
+  .xxx7::after{
+    display: none;
+  }
+  .main_service_container {
+    height: 94vh;
+  }
+  .sub_service_wrapper .service_wrapper {
+    flex-wrap: wrap;
+  }
+  .sub_service_wrapper .service_wrapper .menu_service_img {
+    width: 60%;
+  }
+  .sub_service_wrapper .service_wrapper .menu_category {
+    width: 50%;
+  }
+  .sub_service_wrapper .service_wrapper .menu_subcategory {
+    width: 50%;
+  }
+  .sub_service_wrapper .menu_service_img::before {
+    top: -110px;
+  }
+  .xxx8::before {
+    transform: translateY(39%);
+  }
+
+  //Blog
+  .blog_top_img_container img {
+    width: 100%;
+    max-width: 700px;
+    height: auto;
+  }
+  .blog_top_img_container::after {
+    right: -64px;
+  }
+  .blog .blog_top_container .triangles img:last-child {
+    transform: translateY(35px);
+  }
+  .xxx9::after {
+    transform: translateX(-20%);
+  }
+  .post_container {
+    transform: none;
+  }
+  .blog_wrapper {
+    height: 112.9vh;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+
+  .xxx1, .xxx2, .xxx2_2, .xxx3, .xxx4, .xxx5, .xxx6, .xxx7, .xxx8, .xxx9 {
+    margin: 3rem 3rem;
+  }
+  .xxx2{
+    margin: 3rem 3rem 0;
+  }
+  .xxx1::before {
+    display: none;
+  }
+  .main_how_we_work .main_how_we_work_top .how_we_work_right img {
+    width: 360px;
+    height: 250px;
+  }
+  .main_our_works .main_our_works_img_wrapper .main_gallery {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .main_how_we_work .main_how_we_work_bottom {
+    height: 100px;
+  }
+  .main_service_container .service_triangles img:last-child {
+    width: 75px;
+    height: 75px;
+    transform: rotate(80deg) translateY(10px);
+  }
+  .main_how_we_work .main_how_we_work_top .how_we_work_left .triangles2 img:nth-child(2) {
+    display: none;
+  }
+  .main_how_we_work .main_how_we_work_top .how_we_work_left .xxx1::after {
+    transform: translateY(30%);
+    border: 1px solid orangered;
+  }
+  .main_service_wrapper .main_service_bottom_container {
+    height: 50px;
+  }
+  .main_service_container .xxx1::after {
+   transform: translateY(0%);
+  }
+  .main_why_we .why_we_wrapper .why_container {
+     margin: 15px;
+   }
+  .main_how_we_work .main_how_we_work_top .how_we_work_left .xxx1 {
+    margin: 3rem 0 3rem 3rem;
+  }
+  .main_service_wrapper .main_service_top_container .main_top_triangles img:last-child {
+    transform: translate(20px, 55px);
+  }
+  footer .footer_top {
+     margin-top: 0;
+  }
+  .portfolio_wrapper .portfolio .xxx1 {
+    margin: 5rem 1rem 2rem;
+  }
+  .portfolio_bottom .right {
+    margin-right: 0;
+  }
+  .portfolio_bottom {
+    transform: none;
+  }
+  .portfolio_bottom .right::after {
+    top: 17px;
+    right: 0;
+    width: 350px;
+  }
+  .portfolio_bottom .right::before {
+    width: 200px;
+    height: 200px;
+    bottom: 0;
+    right: 0;
+  }
+  .portfolio_bottom {
+    transform: none;
+    margin: 3em 0;
+  }
+  .vacancy_wrapper .vacancy-right:after {
+    right: -50px;
+    width: 400px;
+    height: 400px;
+  }
+  .vacancy_wrapper {
+    transform: translateY(10%);
+  }
+  .xxx6:after {
+    height: 26%;
+  }
+  .news_wrapper .last_news img {
+    width: 330px;
+  }
+  .news_wrapper .last_news::before {
+    right: 0;
+    width: 200px;
+  }
+  .blog .xxx1 {
+    padding: 3rem 2rem 2rem;
+  }
+  .about_us .about_us_center .about_us_right {
+    transform: translate(0%, 15%);
+  }
+  .contacts .xxx1 .about_us_center .about_us_right:after {
+    right: -24%;
+  }
+  .about_us .about_us_center .about_us_right img {
+    transform: translateX(0%);
+  }
+  .category_wrapper .category_top_container .category_top_triangles img:first-child {
+    transform: translate(-45px, 165px);
+    width: 30px;
+  }
+  .category_wrapper .slogan_wrapper .category_slogan {
+    width: 90%;
+  }
+  .main_service_bottom_container {
+    display: none;
+  }
+  .category_wrapper .category_container .xxx1::after {
+    transform: translateY(38%);
+  }
+  .main_service_container {
+    height: 100vh;
+  }
+  .subcategory_fix {
+    height: 100%;
+  }
+  .slogan_wrapper .subcategory_img_container {
+    flex-wrap: wrap;
+  }
+  .slogan_wrapper .subcategory_img_container div:nth-child(3) {
+    margin: 0 10px 0 0;
+  }
+  .slogan_wrapper .subcategory_img_container::after {
+    right: -50px;
+  }
+  .slogan_wrapper .subcategory_img_container::before {
+    right: 60px;
+    top: -30px;
+  }
+  .sub_service_wrapper {
+    margin-top: 5vh;
+    height: 100vh;
+  }
+  .bigger_sub {
+    margin-left: 21rem;
+  }
+  .xxx8::before {
+    transform: translateY(71%);
+  }
+  .bp{
+    height: 55vh;
+  }
+  .blog_wrapper {
+    height: 90.9vh;
+  }
+  .post_container p {
+    width: 100%;
+  }
+  .blog .xxx1 {
+    margin: 5rem 3rem 2rem;
+  }
+  .blog_top_img_container::after {
+    height: 450px;
+    width: 400px;
+  }
+  .xxx9::after {
+    display: none;
   }
 }
